readme, reqs, other changes

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,9 @@
 # .env.sample
 
-INFURA_KEY=infura_key_here
+# URL for the database connection, replace chain name (e.g. "mainnet") with "{chain}"
+PROD_DB_URL=
+ETHEREUM_NODE_URL=
+GNOSIS_NODE_URL=
 
-# URL for the database connection, replace chain name with "{chain}"
-PROD_DB_URL=database_url_here
+#optional
+INFURA_KEY=infura_key_here
