--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -14,7 +14,10 @@ jobs:
           python-version: '3.11'
       - name: Install Requirements
         run:
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
+      - name: Set PYTHONPATH
+        run: echo "PYTHONPATH=src" >> $GITHUB_ENV
       - name: Pylint
         run:
           pylint src/
