no use of infura, cleanups

--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,12 @@
 # .env.sample
 
-# URL for the database connection, replace chain name (e.g. "mainnet") with "{chain}"
-PROD_DB_URL=
+# URLs for DB connection
+ETHEREUM_DB_URL=
+GNOSIS_DB_URL=
+
+# URLs for Node provider connection
 ETHEREUM_NODE_URL=
 GNOSIS_NODE_URL=
 
-#optional
+# optional
 INFURA_KEY=infura_key_here
