Reformatting and removing strict flag from mypy

--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -25,4 +25,4 @@ jobs:
         run:
           black --check ./
       - name: Type Check (mypy)
-        run: mypy src --strict
+        run: mypy src
