--- a/.env.sample
+++ b/.env.sample
@@ -8,5 +8,10 @@ GNOSIS_DB_URL=
 ETHEREUM_NODE_URL=
 GNOSIS_NODE_URL=
 
+# credentials for writing to db connection
+SOLVER_SLIPPAGE_HOST=
+SOLVER_SLIPPAGE_USER=
+SOLVER_SLIPPAGE_PASS=
+
 # optional
 INFURA_KEY=infura_key_here
