--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 requests==2.31.0
-web3==6.0.0
+web3>=6.0.0
 pandas==2.2.1
 SQLAlchemy==2.0.28
 psycopg2==2.9.9
@@ -8,3 +8,4 @@ black==23.3.0
 mypy==1.4.1
 pylint==3.2.5
 pytest==7.4.0
+setuptools
