--- a/.env.sample
+++ b/.env.sample
@@ -8,10 +8,12 @@ GNOSIS_DB_URL=
 ETHEREUM_NODE_URL=
 GNOSIS_NODE_URL=
 
-# credentials for writing to db connection
-SOLVER_SLIPPAGE_HOST=
-SOLVER_SLIPPAGE_USER=
-SOLVER_SLIPPAGE_PASS=
+# add credentials for connecting to solver slippage DB based on this format
+SOLVER_SLIPPAGE_DB_URL=postgresql://username:password@hostname:port/database
+
+# configure chain sleep time
+ETHEREUM_SLEEP_TIME=
+GNOSIS_SLEEP_TIME=
 
 # optional
 INFURA_KEY=infura_key_here
