stdout, no threads

--- a/.env.sample
+++ b/.env.sample
@@ -1,19 +1,19 @@
 # .env.sample
 
-# URLs for DB connection
-ETHEREUM_DB_URL=
-GNOSIS_DB_URL=
+# DB connection
+DB_URL=
 
-# URLs for Node provider connection
-ETHEREUM_NODE_URL=
-GNOSIS_NODE_URL=
+# Node provider connection
+NODE_URL=
 
-# add credentials for connecting to solver slippage DB based on this format
-SOLVER_SLIPPAGE_DB_URL=postgresql://username:password@hostname:port/database
+# connecting to Solver Slippage DB
+SOLVER_SLIPPAGE_DB_URL=
 
-# configure chain sleep time
-ETHEREUM_SLEEP_TIME=
-GNOSIS_SLEEP_TIME=
+# configure chain sleep time, e.g. CHAIN_SLEEP_TIME=60
+CHAIN_SLEEP_TIME=
+
+# add chain name, e.g. CHAIN_NAME=Ethereum
+CHAIN_NAME=
 
 # optional
-INFURA_KEY=infura_key_here
+INFURA_KEY=
