pytest, readme, .envSample edit

--- a/.env.sample
+++ b/.env.sample
@@ -15,5 +15,5 @@ CHAIN_SLEEP_TIME=
 # add chain name, e.g. CHAIN_NAME=Ethereum
 CHAIN_NAME=
 
-# optional
-INFURA_KEY=
+# OPTIONAL: when running imbalances_script to test for a single tx hash, must provide below variables
+ETHEREUM_NODE_URL=
