envsample file edit

--- a/.env.sample
+++ b/.env.sample
@@ -17,3 +17,8 @@ CHAIN_NAME=
 
 # OPTIONAL: when running imbalances_script to test for a single tx hash, must provide below variables
 ETHEREUM_NODE_URL=
+
+# Include these for fetching token prices
+COINGECKO_API_KEY=
+DUNE_API_KEY=
+MORALIS_KEY=
