addressed most comments

--- a/.env.sample
+++ b/.env.sample
@@ -12,7 +12,7 @@ SOLVER_SLIPPAGE_DB_URL=
 # configure chain sleep time, e.g. CHAIN_SLEEP_TIME=60
 CHAIN_SLEEP_TIME=
 
-# add chain name, e.g. CHAIN_NAME=Ethereum
+# add chain name, e.g. CHAIN_NAME=mainnet
 CHAIN_NAME=
 
 # OPTIONAL: when running imbalances_script to test for a single tx hash, must provide below variables
