--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,13 @@ pandas==2.2.1
 SQLAlchemy==2.0.28
 psycopg2==2.9.9
 python-dotenv==1.0.0
-dune-client==1.7.4
-moralis
-black
-mypy
-pylint
-pytest
+black==23.3.0
+mypy==1.4.1
+pylint==3.2.5
+pytest==7.4.0
 setuptools
 pandas-stubs
 types-psycopg2
 types-requests
+moralis
+dune-client
