--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -28,4 +28,5 @@ jobs:
       - name: Run Pytest
         env:
           MORALIS_API_KEY: ${{ secrets.MORALIS_API_KEY }}
+          CHAIN_SLEEP_TIME: ${{ secrets.CHAIN_SLEEP_TIME }}
         run: pytest tests/test_pricefeed.py
