--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -25,3 +25,7 @@ jobs:
           black --check ./
       - name: Type Check (mypy)
         run: mypy src
+      - name: Tests
+        run: pytest tests/e2e/test_blockchain_data.py
+        env:
+          NODE_URL: ${{ secrets.NODE_URL }}
