--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -26,4 +26,4 @@ jobs:
       - name: Type Check (mypy)
         run: mypy src
       - name: Tests
-        run: pytest tests/e2e/test_blockchain_data.py
+        run: pytest tests/e2e/test_blockchain_data.py tests/e2e/test_imbalances_script.py
