change name of environment variable

--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -28,4 +28,4 @@ jobs:
       - name: Tests
         run: pytest tests/e2e/test_blockchain_data.py tests/e2e/test_imbalances_script.py
         env:
-          NODE_URL: ${{ secrets.NODE_URL }}
+          NODE_URL: ${{ secrets.ETHEREUM_NODE_URL }}
