--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -6,6 +6,23 @@ on:
 jobs:
   python:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: mainnet
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+        # Copy repo contents into container (needed to populate DB)
+        volumes:
+          - ${{ github.workspace }}/database:/docker-entrypoint-initdb.d
     steps:
       - uses: actions/checkout@v3
       - name: Setup Python 3.12
@@ -29,4 +46,5 @@ jobs:
         run: pytest tests/e2e/test_blockchain_data.py tests/e2e/test_imbalances_script.py
         env:
           NODE_URL: ${{ secrets.NODE_URL }}
+          SOLVER_SLIPPAGE_DB_URL: postgres:postgres@localhost:5432/mainnet
           CHAIN_SLEEP_TIME: 1
