--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -20,12 +20,13 @@ jobs:
           --health-retries 5
         ports:
           - 5432:5432
-        # Copy repo contents into container (needed to populate DB)
-        volumes:
-#          - ${{ github.workspace }}/database/00_legacy_tables.sql:/docker-entrypoint-initdb.d/00_legacy_tables.sql
-          - ${{ github.workspace }}/database/01_table_creation.sql:/docker-entrypoint-initdb.d/01_table_creation.sql
     steps:
       - uses: actions/checkout@v3
+      - name: Initialize database
+        run: |
+          psql -h localhost -U postgres -d mainnet -f ${{ github.workspace }}/database/01_table_creation.sql
+        env:
+          PGPASSWORD: postgres
       - name: Setup Python 3.12
         uses: actions/setup-python@v3
         with:
